--- a/src/Components/About/style.css
+++ b/src/Components/About/style.css
@@ -1,73 +1,114 @@
-/* VideoPlayer.css */
-.play-image {
-  position: relative;
-  margin: 2%;
-  display: inline-block;
-  cursor: pointer;
+@import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap");
+
+.images {
+  width: 100vdw;
+  height: 50vh;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  padding: 30px 10px;
+  font-family: "DM Sans", sans-serif;
+  transition: 0.4s ease-in;
+  flex-direction: row;
+  backdrop-filter: blur(50px);
 }
 
-.poster-image {
-  width: 60%; /* Adjust the width as needed */
-  max-height: auto; /* Maintain aspect ratio */
+input[type="radio"] {
+  display: none;
 }
 
-.play-button-overlay {
+.card {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff;
-  font-size: 2rem; /* Increase or decrease button size as needed */
-  opacity: 0.8;
+  width: 60%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  transition: transform 0.4s ease;
+  cursor: pointer;
 }
 
-.popup-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
+.container {
+  width: 100%;
+  max-width: 800px;
+  max-height: 600px;
+  height: 100%;
+  transform-style: preserve-3d;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cards {
+  position: relative;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  margin-bottom: 20px;
+}
+
+.about-img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+#item-1:checked ~ .cards #song-3,
+#item-2:checked ~ .cards #song-1,
+#item-3:checked ~ .cards #song-2 {
+  transform: translateX(-40%) scale(0.8);
+  opacity: 0.4;
+  z-index: 0;
+}
+
+#item-1:checked ~ .cards #song-2,
+#item-2:checked ~ .cards #song-3,
+#item-3:checked ~ .cards #song-1 {
+  transform: translateX(40%) scale(0.8);
+  opacity: 0.4;
+  z-index: 0;
+}
+
+#item-1:checked ~ .cards #song-1,
+#item-2:checked ~ .cards #song-2,
+#item-3:checked ~ .cards #song-3 {
+  transform: translateX(0) scale(1);
+  opacity: 1;
+  z-index: 1;
+}
+
+.main-title {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: white;
+  font-family: "cursive";
+  font-size: 25px;
+  margin-top: 2%;
+}
+@media (max-width: 900px) {
+  .container {
+    display: none;
+  }
+  .images {
+    height: 30vh;
+  }
 }
 
-.close-button {
-  position: fixed;
-  top: 10px;
-  right: 10px;
-  color: #fff;
-  font-size: 4rem; /* Increase or decrease button size as needed */
-  z-index: 999;
+@media (max-width: 1050px) {
+  .main-title {
+    font-size: 18px;
+  }
 }
 
-.video-container {
-  max-width: 100%;
-  max-height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@media (max-width: 400px) {
+  .main-title {
+    font-size: 15px;
+  }
 }
 
-.video-container video {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.play-button {
-  cursor: pointer;
-  font-size: 1.5rem; /* Increase or decrease button size as needed */
-  padding: 0.5rem 1rem;
-  background-color: #FF00FF; /* Customize button background color */
-  color: #fff; /* Customize button text color */
-  border: none;
-  border-radius: 5px;
-}
-
-.play-button:hover {
-  background-color: #800080; /* Customize button hover color */
+.about-text-title {
+  font-family: "cursive" !important;
 }
